<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout_crime_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@id/button_call_police"
        android:layout_toLeftOf="@id/button_call_police"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listViewText_crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listViewText_crime_title"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/listViewText_crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/listViewText_crime_date" />
    </LinearLayout>

    <Button
        android:id="@+id/button_call_police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_call_police" />


</RelativeLayout>